--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,10 +7,12 @@ enable_testing()
 set(SFML_DIR "C:\\Users\\barci\\Desktop\\SFML-2.5.1")
 find_package(SFML 2.5 COMPONENTS graphics audio REQUIRED)
 
-add_executable(main main.cpp src/game.cpp src/game_entity.cpp src/player.cpp src/text/custom_text.cpp)
+add_executable(main main.cpp src/game.cpp src/game_entity.cpp src/player.cpp src/components/custom_text.cpp src/components/custom_button.cpp)
 
 target_link_libraries(main sfml-graphics sfml-audio)
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
 include(CPack)
+
+set_property(TARGET main PROPERTY CXX_STANDARD 17)
