--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(main VERSION 0.1.0)
 include(CTest)
 enable_testing()
 
-set(SFML_DIR "C:\\Users\\barci\\Desktop\\SFML-2.5.1")
+set(SFML_DIR "C:\\SFML-2.5.1\\lib\\cmake\\SFML")
 find_package(SFML 2.5 COMPONENTS graphics audio REQUIRED)
 
 add_executable(main main.cpp src/game.cpp src/components/component.h  src/components/button.cpp src/components/custom_text.cpp src/components/checkbox.cpp)
